--- a/Website/.htaccess
+++ b/Website/.htaccess
@@ -1,4 +1,7 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.php/$0 [PT,L] 
+RewriteRule .* index.php/$0 [PT,L]
+
+php_value post_max_size 500M
+php_value upload_max_filesize 500M
