Added something just happened

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,17 @@
 */cache/!index.html
 
 media/
+
+[Oo]bj
+[Bb]in
+*.user
+*.suo
+*.[Cc]ache
+*.bak
+*.ncb
+*.log 
+*.DS_Store
+[Tt]humbs.db 
+_ReSharper.*
+*.resharper
+Ankh.NoLoad
