Finally fucking working

--- a/Something just happened/SomethingJustHappened/App.config
+++ b/Something just happened/SomethingJustHappened/App.config
@@ -13,6 +13,12 @@
             <setting name="DefaultClipLength" serializeAs="String">
                 <value>00:00:30</value>
             </setting>
+            <setting name="DefaultAudioDevice" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="DefaultVideoDevice" serializeAs="String">
+                <value>0</value>
+            </setting>
         </SomethingJustHappened.Properties.Settings>
     </userSettings>
 </configuration>
