--- a/Something just happened/SomethingJustHappened/SomethingJustHappened.csproj
+++ b/Something just happened/SomethingJustHappened/SomethingJustHappened.csproj
@@ -104,6 +104,9 @@
     <Content Include="ffmpeg.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="mencoder.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="stdole">
