New threading without dispatcher

--- a/Something just happened/SomethingJustHappened/App.config
+++ b/Something just happened/SomethingJustHappened/App.config
@@ -19,6 +19,9 @@
             <setting name="DefaultVideoDevice" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="DataFolder" serializeAs="String">
+                <value>SomethingJustHappened</value>
+            </setting>
         </SomethingJustHappened.Properties.Settings>
     </userSettings>
 </configuration>
