--- a/PromptingDiaryRoom/PromptingDiaryRoom/App.config
+++ b/PromptingDiaryRoom/PromptingDiaryRoom/App.config
@@ -19,6 +19,9 @@
             <setting name="OutputPath" serializeAs="String">
                 <value>C:\Users\Jon\Documents\Prompting Diary Room\Output</value>
             </setting>
+            <setting name="FinishedDelay" serializeAs="String">
+                <value>00:00:15</value>
+            </setting>
         </PromptingDiaryRoom.Properties.Settings>
     </userSettings>
 </configuration>
